2004-08-18  Remi Denis-Courmont

	* src/miredo.cpp, src/privproc.*:
	- fixed privileged process.

2004-08-17  Remi Denis-Courmont

	* libtun6/ipv6-tunnel.*:
	- libtun6 made thread-safe
	* libteredo/relay.*:
	- removed ReceiveIPv6Packet callback (one step toward
	re-entrancy and thread-safety),
	- tunnel addresses changes implemented
	* src/miredo.cpp, src/relay.*:
	- implemented a privileged process to set up tunnel addresses.

2004-07-31  Remi Denis-Courmont

	* libteredo/*, src/*:
	- huge code split: libteredo handles teredo in userland
	miredo links libteredo with libtun6.

2004-07-14  Remi Denis-Courmont

	* src/main.c (init-security):
	- do not setsid if nodetach mode is enabled,
	- do not chroot if running as root.

2004-07-12  Remi Denis-Courmont

	* src/teredo-udp.cpp (MiredoCommonUDP::ReceivePacket):
	- supposedly fixed alignments issues.
	* src/main.c:
	- more explicit error messages.

2004-07-11  Remi Denis-Courmont

	* src/teredo-udp.cpp:
	- fixed call to recvfrom() that caused problems with
	  determining UDP packets source,
	* src/server.cpp:
	- fixed likely byte-alignments issues (teredo_send_ra),
	- clean up, use of MiredoServer class

2004-07-10  Remi Denis-Courmont

	* libtun6.ipv6-tunnel.c:
	- no longer (try to) bring iface down in ~IPv6Tunnel(),
	* configure.ac:
	- removed --enable-miredo-group, use user's group instead,
	* src/main.c:
	- support for chroot(),
	- ability to override setuid user from the command line,
	* src/relay.cpp:
	- do not print routing warning when receiving multicast packet,
	* src/miredo.cpp:
	- daemonize before setuid,
	- ability to reload (not yet existing) the configuration file,
	- initial signal handling.

2004-06-27  Remi Denis-Courmont

	* include/teredo.c:
	- allow unknown Teredo address flags, as specified per new draft 02,
	* src/server_pkt.cpp:
	- clean ups,
	- set IPv6 source correctly in server Router Advertisements,
	* src/relay.cpp, src/server_pkt.cpp: