@@ -1,12 +1,13 @@
 Incomplete raw ToDo list:
 ==========================
-$Id: TODO,v 1.10 2004/07/13 09:53:36 rdenisc Exp $
+$Id: TODO,v 1.11 2004/08/22 16:58:53 rdenisc Exp $
 
 Features:
 ----------
 - some statistics,
 - (incomplete yet) automatic relay IPv6 address configuration,
 - automatic relay IPv6 address re-configuration/update,
+- support for being a relay behind a restricted NAT,
 - Teredo client support,
 
 Security:
